feature(header)now there is three  different buttons that translate the page to different languages

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,8 +1,8 @@
 {
     "header":{
-        "projects":"Projects",
-        "about":"About me",
-        "contact":"Contact"
+        "projects":"PROJECTS",
+        "about":"ABOUT ME",
+        "contact":"CONTACT"
     }
     
 }
