--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,8 +1,7 @@
 {
     "header":{
-        "projects":"Projetos",
-        "about":"About me",
-        "contact":"Contact"
+        "projects":"PROJETOS",
+        "about":"SOBRE MIM",
+        "contact":"CONTATOS"
     }
-    
 }
