--- a/locales/it.json
+++ b/locales/it.json
@@ -5,7 +5,7 @@
         "contact":"CONTATTO",
         "iam":"IO SONO",
         "name":"BRUNO POSTAI",
-        "stack":"SVILUPPATORE FRONT-END"
+        "stack":"FRONT-END DEVELOPER"
     },
     "aboutMe":{
         "aboutMeText":"Ciao, sono Bruno, un web developer dedicato appassionato di trasformare idee in straordinarie esperienze digitali. Con oltre un anno di studio immersivo nel campo dello sviluppo web, mi sono immergito nei linguaggi e nelle tecnologie fondamentali per creare ambienti online coinvolgenti. Lungo questo percorso, ho affinato solide competenze in HTML e CSS, che fungono da base per la presentazione visuale sul web. La mia competenza in JavaScript e JSON mi consente di creare interfacce dinamiche e interattive, offrendo agli utenti esperienze fluide e coinvolgenti. Che si tratti di sviluppare siti web responsivi, creare applicazioni interattive o ottimizzare le prestazioni del sistema, sono impegnato a superare sfide e offrire soluzioni che lasciano un'impressione duratura."
