feature(general css)modifying some css to mostly fix responsivity on smaller devices

--- a/locales/it.json
+++ b/locales/it.json
@@ -8,7 +8,7 @@
         "stack":"FRONT-END DEVELOPER"
     },
     "aboutMe":{
-        "aboutMeText":"Ciao, sono Bruno, un web developer dedicato appassionato di trasformare idee in straordinarie esperienze digitali. Con oltre un anno di studio immersivo nel campo dello sviluppo web, mi sono immergito nei linguaggi e nelle tecnologie fondamentali per creare ambienti online coinvolgenti. Lungo questo percorso, ho affinato solide competenze in HTML e CSS, che fungono da base per la presentazione visuale sul web. La mia competenza in JavaScript e JSON mi consente di creare interfacce dinamiche e interattive, offrendo agli utenti esperienze fluide e coinvolgenti. Che si tratti di sviluppare siti web responsivi, creare applicazioni interattive o ottimizzare le prestazioni del sistema, sono impegnato a superare sfide e offrire soluzioni che lasciano un'impressione duratura."
+        "aboutMeText":"Ciao, sono Bruno, un Front-End Developer di 21 anni. Lavoro con React/Next.js, JavaScript, TypeScript e PHP e attualmente sto conseguendo una laurea in Ingegneria del Software. Il mio percorso nel settore tecnologico è guidato da un forte desiderio di ampliare le mie competenze e crescere come professionista. Al momento, sto studiando C# per diventare uno sviluppatore full-stack. Anche se il mio curriculum è ancora in fase di sviluppo, una cosa che non mi manca è la voglia di imparare. Questo mi rende pronto ad affrontare nuove sfide e a contribuire a progetti di grande impatto."
     },
     "myProjects":{
         "myProjects":"I MIEI PROGETTI"
