--- a/locales/pt.json
+++ b/locales/pt.json
@@ -8,7 +8,7 @@
         "stack":"FRONT-END DEVELOPER"
     },
     "aboutMe":{
-        "aboutMeText":"Olá, eu sou Bruno, um desenvolvedor web dedicado apaixonado por transformar ideias em experiências digitais notáveis. Com mais de um ano de estudo imersivo no campo do desenvolvimento web, mergulhei em linguagens e tecnologias fundamentais para criar ambientes online envolventes. Ao longo dessa jornada, aprimorei habilidades sólidas em HTML e CSS, que servem como a espinha dorsal para a apresentação visual na web. Minha proficiência em JavaScript e JSON me capacita a criar interfaces dinâmicas e interativas, proporcionando aos usuários experiências suaves e envolventes. Seja desenvolvendo sites responsivos, criando aplicações interativas ou otimizando o desempenho do sistema, estou comprometido em superar desafios e oferecer soluções que deixem uma impressão duradoura."
+        "aboutMeText":"Olá, sou o Bruno, um Desenvolvedor Front-End de 21 anos. Trabalho com React/Next.js, JavaScript, TypeScript e PHP, e atualmente estou cursando Engenharia de Software. Minha jornada na tecnologia é guiada por um forte desejo de expandir minhas habilidades e crescer como profissional. Atualmente, estou me dedicando ao estudo de C# para avançar em direção a me tornar um desenvolvedor full-stack. Embora meu currículo ainda esteja em desenvolvimento, algo que não me falta é vontade de aprender. Isso me torna pronto para enfrentar novos desafios e contribuir para projetos impactantes."
     }, 
     "myProjects":{
         "myProjects":"MEUS PROJETOS"
