--- a/locales/en.json
+++ b/locales/en.json
@@ -14,6 +14,10 @@
     "myProjects": {
         "myProjects": "MY PROJECTS"
     },
+    "projectSection":{
+        "visitSite": "VISIT SITE",
+        "sourceCode": "SOURCE CODE"
+    },
     "contacts": {
         "title":"CONTACT ME",
         "contactMe": "It's a pleasure to welcome you! If you'd like to get in touch, I'm available to discuss collaboration opportunities, exciting projects, or simply exchange ideas. Feel free to send a message, and I'll do my best to respond as promptly as possible. Best regards!"
